@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "0.5.0"
+  VERSION = "0.5.1"
 end
